# llm-patch

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: INSTRUCTIONS.md
.github/workflows/: ci.yml
docker/: Dockerfile  README.md  entrypoint.sh  publish_dockerhub.sh
docs/: guided_loop_checklist.json  guided_loop_strategy.md  hypothesis_lifecycle_log.md  hypothesis_overhaul_plan.md  patch_eval_results.md  test_cases.md  testing_strategy.md  toolchains.md
scripts/: classify_first_errors.py  find_case_by_fingerprint.py  fix.py  generate_failures.py  generate_patches.py  run_guided_loop.py  run_guided_loop_eval.py  run_patch_eval.py
src/llm_patch/: __init__.py  aider_patch.py  fuzzy_matcher.py  markdown.py  patch_applier.py
src/llm_patch/clients/: __init__.py  ollama.py
src/llm_patch/strategies/: __init__.py  base.py
src/llm_patch/strategies/guided_loop/: __init__.py  checklist.py  compilation.py  controller.py  critique_phase.py  critiques.py  error_processing.py  evaluation.py  gather_phase.py  gathering.py  history.py  hypothesis.py  iteration_utils.py  models.py  patching.py  phase_prompt_preparer.py  phase_runner.py  phases.py  post_iteration.py  prompt_fragments.py  prompting.py  trace_planning.py
tests/: __init__.py  test_fix_script.py  test_fuzzy_matcher.py  test_guided_loop.py  test_patch_applier.py  test_run_guided_loop_error_count.py  test_run_guided_loop_result_payload.py
ui/: README.md
ui/reviewer-ui/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
ui/reviewer-ui/scripts/: check_case.ts
ui/reviewer-ui/server/: index.ts
ui/reviewer-ui/src/: App.css  App.tsx  index.css  main.tsx  types.ts
ui/reviewer-ui/src/api/: client.ts
ui/reviewer-ui/src/components/: AnnotationPanel.tsx  CaseSidebar.tsx  CaseWorkspace.tsx
ui/reviewer-ui/src/server/: apiHandler.ts  datasetLoader.ts  datasetTypes.ts
ui/reviewer-ui/src/shared/: apiTypes.ts
ui/reviewer-ui/src/store/: useReviewStore.ts
ui/reviewer-ui/src/utils/: caseFilters.ts  clipboard.ts  diagnostics.ts
